fix spacing on search area

--- a/style/index.scss
+++ b/style/index.scss
@@ -147,10 +147,10 @@ button {
     &top {
       display: flex;
       align-items: center;
+      gap: 1.5625rem;
     }
 
     &button {
-      margin-right: 1rem;
     }
 
     &box {
@@ -158,21 +158,22 @@ button {
       background-color: $search-and-content-bg;
       border-radius: 25px;
       padding: 0.4rem;
-      text-indent: 0.3rem;
-      width: 34.6rem;
+      text-indent: 0.7rem;
+      margin-left: -0.56rem;
+      flex: .82;
     }
 
     &bell {
-      margin-left: 6.6rem;
+      margin-left: auto;
+      justify-self: end;
     }
 
     &profile-pic {
-      margin-left: 1.84rem;
     }
 
     &profile-name {
-      margin-left: 1.9rem;
       font-weight: bold;
+      justify-self: end;
     }
 
     &bottom {
@@ -348,7 +349,7 @@ button {
     display: grid;
     grid-template-columns: 0.36fr 1fr;
     grid-template-rows: 1fr 1fr;
-    grid-row-gap: .3rem;
+    grid-row-gap: 0.3rem;
   }
   &__pic {
     grid-area: 1/1/3/2;
@@ -359,7 +360,7 @@ button {
   &__name {
     align-self: end;
     font-weight: bold;
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
   &__description {
     font-size: 0.8rem;
